test/parsetest/valid/empty_statement.java
class A {
    public void blub(){
        ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
        ;;;;;;;;;;;;;;;;;;;;;;;;;;;;4;4;-3;
    }
}