test/parsetest/invalid/if_else.java
class A {
    public static void main(String[] args){
        if (blub) bla else 4;
    }
}